# ur5_manipulator_conveyor

./: README.md
conveyorbelt_gazebo/worlds/: conveyorbelt.world
inverse_kinematics/: CMakeLists.txt  package.xml
inverse_kinematics/launch/: bringup_with_tf.launch.py  move_to_joint_goal.launch.py  move_to_location.launch.py  simple_pick_place.launch.py  ur5_pick_place.launch.py
inverse_kinematics/src/: REViTArm_IK.cpp  move_to_joint_goal.cpp  move_to_location.cpp  pick_place_hsv.cpp  pick_place_parse.cpp  pick_place_yolo.cpp  simple_move_with_gripper.cpp  simple_pick_place.cpp  track_pick_place_yolo.cpp
ros2_conveyorbelt/: CMakeLists.txt
ros2_conveyorbelt/include/ros2_conveyorbelt/: ros2_conveyorbelt_plugin.hpp
ros2_conveyorbelt/python/: SpawnLoop.py  SpawnRandom.py
ur5_camera_gripper_moveit_config/: .setup_assistant  package.xml
ur5_camera_gripper_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  ur.srdf
ur_sim/: CMakeLists.txt  package.xml
ur_sim/config/: ur5_controllers_gripper.yaml
ur_sim/launch/: spawn_ur5_camera.launch.py  spawn_ur5_camera_moveit.launch.py  spawn_ur5_final.launch.py  spawn_ur5_track.launch.py  spawn_ur5_world_movit.launch.py  view_ur5_camera.launch.py
ur_sim/rviz/: gripper_camera_view.rviz  view_ur5_camera.rviz
ur_sim/urdf/: belt.urdf.xacro  bin.urdf.xacro  camera.xacro  robotiq_gripper_macro.xacro  ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro  ur5_macro.xacro
ur_sim/worlds/: world.world
